// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormInputGroup Snapshots Children Variants renders with multiple children: FormInputGroup - Multiple Children 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "marginHorizontal": 16,
        "marginTop": 24,
      }
    }
    testID="form-group"
  >
    <Text
      accessibilityRole="header"
      style={
        {
          "color": "#6B6B6B",
        }
      }
    >
      Multiple Children
    </Text>
    <Text>
      First input
    </Text>
    <Text>
      Second input
    </Text>
    <Text>
      Third input
    </Text>
  </View>
</View>
`;

exports[`FormInputGroup Snapshots Children Variants renders with nested components: FormInputGroup - Nested Components 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "marginHorizontal": 16,
        "marginTop": 24,
      }
    }
    testID="form-group"
  >
    <Text
      accessibilityRole="header"
      style={
        {
          "color": "#6B6B6B",
        }
      }
    >
      Nested
    </Text>
    <View
      style={
        {
          "marginHorizontal": 16,
          "marginTop": 24,
        }
      }
      testID="nested-group"
    >
      <Text>
        Nested content
      </Text>
    </View>
  </View>
</View>
`;

exports[`FormInputGroup Snapshots Children Variants renders with single child: FormInputGroup - Single Child 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "marginHorizontal": 16,
        "marginTop": 24,
      }
    }
    testID="form-group"
  >
    <Text
      accessibilityRole="header"
      style={
        {
          "color": "#6B6B6B",
        }
      }
    >
      Single Child
    </Text>
    <Text>
      Single input
    </Text>
  </View>
</View>
`;

exports[`FormInputGroup Snapshots Dark Mode renders with title in dark mode: FormInputGroup - Dark Mode With Title 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "marginHorizontal": 16,
        "marginTop": 24,
      }
    }
    testID="form-group"
  >
    <Text
      accessibilityRole="header"
      style={
        {
          "color": "#A3A3A3",
        }
      }
    >
      Account Details
    </Text>
    <Text>
      Input placeholder
    </Text>
  </View>
</View>
`;

exports[`FormInputGroup Snapshots Dark Mode renders without title in dark mode: FormInputGroup - Dark Mode Without Title 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "marginHorizontal": 16,
        "marginTop": 24,
      }
    }
    testID="form-group"
  >
    <Text>
      Input placeholder
    </Text>
  </View>
</View>
`;

exports[`FormInputGroup Snapshots Light Mode renders with title in light mode: FormInputGroup - Light Mode With Title 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "marginHorizontal": 16,
        "marginTop": 24,
      }
    }
    testID="form-group"
  >
    <Text
      accessibilityRole="header"
      style={
        {
          "color": "#6B6B6B",
        }
      }
    >
      Account Details
    </Text>
    <Text>
      Input placeholder
    </Text>
  </View>
</View>
`;

exports[`FormInputGroup Snapshots Light Mode renders without title in light mode: FormInputGroup - Light Mode Without Title 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "marginHorizontal": 16,
        "marginTop": 24,
      }
    }
    testID="form-group"
  >
    <Text>
      Input placeholder
    </Text>
  </View>
</View>
`;

exports[`FormInputGroup Snapshots Spacing Variants renders with custom horizontal margin: FormInputGroup - Custom Horizontal Margin 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "marginHorizontal": 32,
        "marginTop": 24,
      }
    }
    testID="form-group"
  >
    <Text
      accessibilityRole="header"
      style={
        {
          "color": "#6B6B6B",
        }
      }
    >
      Custom Margin
    </Text>
    <Text>
      Content
    </Text>
  </View>
</View>
`;

exports[`FormInputGroup Snapshots Spacing Variants renders with custom top margin: FormInputGroup - Custom Top Margin 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "marginHorizontal": 16,
        "marginTop": 40,
      }
    }
    testID="form-group"
  >
    <Text
      accessibilityRole="header"
      style={
        {
          "color": "#6B6B6B",
        }
      }
    >
      Custom Top
    </Text>
    <Text>
      Content
    </Text>
  </View>
</View>
`;

exports[`FormInputGroup Snapshots Spacing Variants renders with default spacing: FormInputGroup - Default Spacing 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "marginHorizontal": 16,
        "marginTop": 24,
      }
    }
    testID="form-group"
  >
    <Text
      accessibilityRole="header"
      style={
        {
          "color": "#6B6B6B",
        }
      }
    >
      Default Spacing
    </Text>
    <Text>
      Content
    </Text>
  </View>
</View>
`;

exports[`FormInputGroup Snapshots Spacing Variants renders with zero margins: FormInputGroup - Zero Margins 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "marginHorizontal": 0,
        "marginTop": 0,
      }
    }
    testID="form-group"
  >
    <Text
      accessibilityRole="header"
      style={
        {
          "color": "#6B6B6B",
        }
      }
    >
      Zero Margins
    </Text>
    <Text>
      Content
    </Text>
  </View>
</View>
`;

exports[`FormInputGroup Snapshots Title Variants renders with long title: FormInputGroup - Long Title 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "marginHorizontal": 16,
        "marginTop": 24,
      }
    }
    testID="form-group"
  >
    <Text
      accessibilityRole="header"
      style={
        {
          "color": "#6B6B6B",
        }
      }
    >
      Personal Information and Contact Details
    </Text>
    <Text>
      Content
    </Text>
  </View>
</View>
`;

exports[`FormInputGroup Snapshots Title Variants renders with lowercase title (gets uppercased): FormInputGroup - Lowercase Title 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "marginHorizontal": 16,
        "marginTop": 24,
      }
    }
    testID="form-group"
  >
    <Text
      accessibilityRole="header"
      style={
        {
          "color": "#6B6B6B",
        }
      }
    >
      account details
    </Text>
    <Text>
      Content
    </Text>
  </View>
</View>
`;

exports[`FormInputGroup Snapshots Title Variants renders with short title: FormInputGroup - Short Title 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "marginHorizontal": 16,
        "marginTop": 24,
      }
    }
    testID="form-group"
  >
    <Text
      accessibilityRole="header"
      style={
        {
          "color": "#6B6B6B",
        }
      }
    >
      Info
    </Text>
    <Text>
      Content
    </Text>
  </View>
</View>
`;

exports[`FormInputGroup Snapshots Title Variants renders with special characters in title: FormInputGroup - Special Characters Title 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "marginHorizontal": 16,
        "marginTop": 24,
      }
    }
    testID="form-group"
  >
    <Text
      accessibilityRole="header"
      style={
        {
          "color": "#6B6B6B",
        }
      }
    >
      Información Personal
    </Text>
    <Text>
      Content
    </Text>
  </View>
</View>
`;
